@@ -32,3 +32,8 @@ Add new items to bottom
 2004-06-08, Perry Rapp
  Filter out also clw files in MSVC filter.
  Bump version to 1.2.2.0.
+
+2004-08-01, Perry Rapp
+ Implement Japanese satellite resource DLL
+ WinMerge PATCH#967405: Add Japanese satellite dll to MakePatchDirs
+
